--- a/src/app/components/search-machines/search-machines.component.html
+++ b/src/app/components/search-machines/search-machines.component.html
@@ -12,8 +12,8 @@
           class="form-control"
           placeholder="Search for machines"
           [(ngModel)]="searchQuery"
-          (focus)="searchFocus = true"
-          (blur)="searchFocus = false"
+          (focus)="searchFocus = true; searchMachines()"
+          (blur)="searchFocus = false; searchMachines()"
           (keyup)="searchMachines()"
         />
       </div>
@@ -24,7 +24,7 @@
         </li>
       </ul>
 
-      <div *ngIf="machinesFiltered.length > 0">
+      <div *ngIf="machinesFiltered.length > 0" [@fadeIn]>
         <div class="row">
           @if (searchQuery.length > 0) {
           <h3 class="mt-3">Found {{ machinesFiltered.length }} machines:</h3>
@@ -33,8 +33,8 @@
           }
 
           <div
-            *ngFor="let machine of machinesFiltered"
-            class="col-lg-6 mb-4 d-flex align-items-stretch"
+            *ngFor="let machine of machinesFiltered" 
+            class="col-lg-6 mb-4 d-flex align-items-stretch" 
           >
             <app-machine-card
               [name]="machine.name"
@@ -49,8 +49,8 @@
           </div>
         </div>
       </div>
-      <div *ngIf="machinesFiltered.length === 0" class="col text-center">
-        <p>No machines found</p>
+      <div *ngIf="machinesFiltered.length === 0 && searchQuery.length > 3" class="col">
+        <h3 class="mt-3">(No machines)</h3>
       </div>
     </div>
   </div>
