--- a/src/app/components/machine-card/machine-card.component.html
+++ b/src/app/components/machine-card/machine-card.component.html
@@ -1,7 +1,7 @@
 <div class="card w-100 card-shadow p-2 h-100">
   <img [src]="image" class="card-img-top" alt="..." />
   <div class="card-body d-flex flex-column justify-content-between">
-    <h5 class="card-title">{{ name }}</h5>
+    <h5 class="card-title">{{ name }}<span *ngIf="bestRank"> - <strong class="text-green">Best Value!</strong></span></h5>
     <p class="card-text">
       {{ description }}
     </p>
