--- a/src/app/components/search-machines/search-machines.component.html
+++ b/src/app/components/search-machines/search-machines.component.html
@@ -18,7 +18,11 @@
         />
       </div>
 
-      <ul *ngIf="searchFocus" [@staggeredFadeIn]="searchSuggestions.length" class="mb-0">
+      <ul
+        *ngIf="searchFocus"
+        [@staggeredFadeIn]="searchSuggestions.length"
+        class="mb-0"
+      >
         <li *ngFor="let text of searchSuggestions">
           {{ text }}
         </li>
@@ -33,15 +37,14 @@
           }
 
           <div
-            *ngFor="let machine of machinesFiltered" 
-            class="col-lg-6 mb-4 d-flex align-items-stretch" 
+            *ngFor="let machine of machinesFiltered"
+            class="col-lg-6 mb-4 d-flex align-items-stretch"
           >
             <app-machine-card
               [name]="machine.name"
               [description]="machine.description"
               [image]="machine.image"
               [url]="machine.url"
-              [bestRank]="machine.rank === bestAvailableRank && machinesFiltered.length > 1"
             >
               <p *ngIf="searchTags.length > 0" class="matching-tag-text">
                 Matching tags: <em>{{ searchTags | formatTags }}</em>
@@ -50,7 +53,10 @@
           </div>
         </div>
       </div>
-      <div *ngIf="machinesFiltered.length === 0 && searchQuery.length > 3" class="col">
+      <div
+        *ngIf="machinesFiltered.length === 0 && searchQuery.length > 3"
+        class="col"
+      >
         <h3 class="mt-3">(No machines)</h3>
       </div>
     </div>
